RTL support: Address review issues

--- a/briar-android/src/main/res/layout/activity_change_password.xml
+++ b/briar-android/src/main/res/layout/activity_change_password.xml
@@ -16,8 +16,7 @@
 		android:paddingLeft="@dimen/margin_activity_horizontal"
 		android:paddingRight="@dimen/margin_activity_horizontal"
 		android:paddingStart="@dimen/margin_activity_horizontal"
-		android:paddingTop="@dimen/margin_activity_vertical"
-		android:id="@+id/relativeLayout2">
+		android:paddingTop="@dimen/margin_activity_vertical">
 
 		<android.support.design.widget.TextInputLayout
 			android:id="@+id/current_password_entry_wrapper"
@@ -25,10 +24,10 @@
 			android:layout_height="wrap_content"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true"
-			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent">
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/current_password_entry"
@@ -45,10 +44,10 @@
 			android:layout_height="wrap_content"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true"
-			app:layout_constraintTop_toBottomOf="@id/current_password_entry_wrapper"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent">
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/current_password_entry_wrapper"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/new_password_entry"
@@ -65,10 +64,10 @@
 			android:layout_height="wrap_content"
 			app:errorEnabled="true"
 			app:hintEnabled="false"
-			app:passwordToggleEnabled="true"
-			app:layout_constraintTop_toBottomOf="@id/new_password_entry_wrapper"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent">
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/new_password_entry_wrapper"
+			app:passwordToggleEnabled="true">
 
 			<EditText
 				android:id="@+id/new_password_confirm"
@@ -85,9 +84,9 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:visibility="invisible"
-			app:layout_constraintTop_toBottomOf="@id/new_password_confirm_wrapper"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"/>
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/new_password_confirm_wrapper"/>
 
 		<Button
 			android:id="@+id/change_password"
@@ -97,19 +96,19 @@
 			android:layout_marginTop="@dimen/margin_medium"
 			android:enabled="false"
 			android:text="@string/change_password"
-			tools:enabled="true"
-			app:layout_constraintTop_toBottomOf="@id/strength_meter"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"/>
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/strength_meter"
+			tools:enabled="true"/>
 
 		<ProgressBar
 			android:id="@+id/progress_wheel"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:visibility="invisible"
-			app:layout_constraintTop_toTopOf="@id/change_password"
 			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"/>
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="@id/change_password"/>
 
 	</android.support.constraint.ConstraintLayout>
 
