--- a/briar-android/src/main/res/layout/text_input_view_large.xml
+++ b/briar-android/src/main/res/layout/text_input_view_large.xml
@@ -41,9 +41,10 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="@android:color/transparent"
+				android:gravity="bottom"
 				android:inputType="textMultiLine|textLongMessage|textCapSentences|textAutoCorrect"
 				android:minHeight="@dimen/text_input_height"
-				android:paddingBottom="@dimen/margin_small"
+				android:paddingBottom="10dp"
 				android:paddingEnd="@dimen/margin_small"
 				android:paddingRight="@dimen/margin_small"
 				android:paddingTop="@dimen/margin_small"
