--- a/briar-android/src/main/res/layout/activity_open_database.xml
+++ b/briar-android/src/main/res/layout/activity_open_database.xml
@@ -36,6 +36,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_margin="8dp"
+		android:gravity="center"
 		android:paddingLeft="@dimen/margin_large"
 		android:paddingRight="@dimen/margin_large"
 		android:text="@string/startup_open_database"
