--- a/briar-android/src/main/res/layout/author_view.xml
+++ b/briar-android/src/main/res/layout/author_view.xml
@@ -63,7 +63,7 @@
 
 	<TextView
 		android:id="@+id/dateView"
-		android:layout_width="0dp"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textColor="?android:attr/textColorSecondary"
 		android:textSize="@dimen/text_size_tiny"
