--- a/briar-android/src/main/res/layout/list_item_blog_comment.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_comment.xml
@@ -18,20 +18,21 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:padding="@dimen/listitem_vertical_margin"
-		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:persona="commenter"/>
 
 	<com.vanniktech.emoji.EmojiTextView
 		android:id="@+id/bodyView"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:paddingBottom="@dimen/listitem_vertical_margin"
 		android:paddingEnd="@dimen/listitem_vertical_margin"
 		android:paddingStart="@dimen/listitem_vertical_margin"
 		android:textColor="?android:attr/textColorSecondary"
 		android:textSize="@dimen/text_size_small"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/authorView"
 		tools:text="This is a comment that appears below a blog post. Usually, it is expected to be rather short. Not much longer than this one."/>
