--- a/briar-android/src/main/res/menu/contact_list_actions.xml
+++ b/briar-android/src/main/res/menu/contact_list_actions.xml
@@ -6,7 +6,13 @@
 	<item
 		android:id="@+id/action_add_contact"
 		android:icon="@drawable/ic_add_white"
-		android:title="@string/add_contact_title"
+		android:title="@string/add_contact_nearby_title"
 		app:showAsAction="ifRoom"/>
+
+	<item
+		android:id="@+id/action_add_contact_via_link"
+		android:icon="@drawable/ic_link"
+		android:title="@string/add_contact_via_link_title"
+		app:showAsAction="never"/>
 
 </menu>
