--- a/briar-android/src/main/res/layout/activity_contact_link_output.xml
+++ b/briar-android/src/main/res/layout/activity_contact_link_output.xml
@@ -10,11 +10,11 @@
 		android:id="@+id/linkIntro"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_margin="16dp"
-		android:text="Copy this link and send it to the contact you want to add:"
+		android:layout_margin="@dimen/margin_large"
+		android:text="@string/send_link_instructions"
 		android:textIsSelectable="true"
 		android:textSize="18sp"
-		app:layout_constraintBottom_toTopOf="@+id/linkView"
+		app:layout_constraintBottom_toTopOf="@id/linkView"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
@@ -24,44 +24,39 @@
 		android:id="@+id/linkView"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_margin="16dp"
+		android:layout_margin="@dimen/margin_large"
 		android:textIsSelectable="true"
 		android:textSize="18sp"
 		android:typeface="monospace"
-		app:layout_constraintBottom_toTopOf="@+id/button"
+		app:layout_constraintBottom_toTopOf="@id/copyButton"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/linkIntro"
-		tools:text="briar://scnsdflamslmksdflksdf"/>
+		app:layout_constraintTop_toBottomOf="@id/linkIntro"
+		tools:text="briar://scnsdflamslkfjgluoblmksdfbwevlewajfdlkjewwhqliafskfjhskdjhvoieiv"/>
 
 	<Button
-		android:id="@+id/button"
-		style="@style/BriarButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_margin="16dp"
-		android:text="Copy link"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@+id/enterLinkButton"
-		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintHorizontal_chainStyle="spread"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/linkView"/>
-
-	<Button
-		android:id="@+id/enterLinkButton"
+		android:id="@+id/copyButton"
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginLeft="8dp"
-		android:layout_marginRight="8dp"
-		android:layout_marginStart="8dp"
-		android:text="Enter Link"
-		app:layout_constraintBottom_toBottomOf="@+id/button"
+		android:layout_margin="@dimen/margin_large"
+		android:text="@string/copy_button"
+		app:layout_constraintEnd_toStartOf="@id/shareButton"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/linkView"/>
+
+	<Button
+		android:id="@+id/shareButton"
+		style="@style/BriarButtonFlat.Positive"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_margin="@dimen/margin_large"
+		android:text="@string/share_button"
+		app:layout_constraintBottom_toBottomOf="@id/copyButton"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintStart_toEndOf="@+id/button"
-		app:layout_constraintTop_toTopOf="@+id/button"/>
+		app:layout_constraintStart_toEndOf="@id/copyButton"
+		app:layout_constraintTop_toTopOf="@id/copyButton"/>
 
 </android.support.constraint.ConstraintLayout>
