--- a/briar-android/src/main/res/layout/list_item_pending_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_pending_contact.xml
@@ -7,40 +7,75 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
+	<org.briarproject.briar.android.view.TextAvatarView
+		android:id="@+id/avatar"
+		android:layout_width="@dimen/listitem_picture_frame_size"
+		android:layout_height="@dimen/listitem_picture_frame_size"
+		android:layout_marginBottom="8dp"
+		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
+		android:layout_marginStart="@dimen/listitem_horizontal_margin"
+		android:layout_marginTop="8dp"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
+
 	<com.vanniktech.emoji.EmojiTextView
 		android:id="@+id/name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
+		android:layout_marginEnd="@dimen/margin_large"
+		android:layout_marginStart="@dimen/margin_large"
+		android:layout_marginTop="@dimen/margin_large"
 		android:textColor="?android:attr/textColorPrimary"
 		android:textSize="@dimen/text_size_medium"
-		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constrainedWidth="true"
+		app:layout_constraintBottom_toTopOf="@+id/status"
 		app:layout_constraintEnd_toStartOf="@+id/time"
+		app:layout_constraintHorizontal_bias="0.5"
 		app:layout_constraintHorizontal_chainStyle="spread_inside"
-		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintStart_toEndOf="@+id/avatar"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintVertical_chainStyle="packed"
 		tools:text="This is a name of a contact"/>
+
+	<TextView
+		android:id="@+id/status"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginRight="16dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/add_contact_remote_connecting"
+		app:layout_constraintBottom_toTopOf="@+id/divider"
+		app:layout_constraintEnd_toStartOf="@+id/time"
+		app:layout_constraintHorizontal_bias="0.0"
+		app:layout_constraintStart_toStartOf="@+id/name"
+		app:layout_constraintTop_toBottomOf="@+id/name"/>
 
 	<TextView
 		android:id="@+id/time"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/margin_large"
+		android:layout_marginBottom="8dp"
+		android:layout_marginTop="8dp"
 		android:textColor="?android:attr/textColorSecondary"
 		android:textSize="@dimen/text_size_small"
-		app:layout_constraintBottom_toBottomOf="@+id/name"
+		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toEndOf="@+id/name"
-		app:layout_constraintTop_toTopOf="@+id/name"
+		app:layout_constraintTop_toTopOf="parent"
 		tools:text="Dec 24"/>
 
 	<View
 		android:id="@+id/divider"
 		style="@style/Divider.ContactList"
 		android:layout_width="0dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginStart="8dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"/>
+		app:layout_constraintStart_toEndOf="@+id/avatar"/>
 
 </android.support.constraint.ConstraintLayout>
