Allow actual QR code scanning and use dedicated contact alias fragment

--- a/briar-android/src/main/res/layout/fragment_contact_link_input.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_input.xml
@@ -14,6 +14,7 @@
 		android:hint="@string/contact_name_hint"
 		android:importantForAutofill="no"
 		android:inputType="text|textCapWords"
+		android:visibility="gone"
 		app:layout_constraintBottom_toTopOf="@id/linkInput"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="@dimen/margin_large"
 		android:layout_marginStart="@dimen/margin_large"
+		android:layout_marginTop="16dp"
 		android:hint="@string/contact_link_hint"
 		android:importantForAutofill="no"
 		android:inputType="textUri"
@@ -40,7 +42,11 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
+		android:layout_marginEnd="8dp"
+		android:layout_marginRight="8dp"
+		android:drawableLeft="@drawable/ic_content_paste"
+		android:drawablePadding="8dp"
+		android:drawableTint="@color/briar_text_link"
 		android:text="@string/paste_button"
 		app:layout_constraintBottom_toBottomOf="@id/linkInput"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +61,8 @@
 		android:layout_margin="@dimen/margin_large"
 		android:enabled="false"
 		android:text="@string/add_contact_button"
+
+		android:visibility="gone"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/linkInput"
