Make QR code another view on the invite link

--- a/briar-android/src/main/res/layout/fragment_contact_link_output.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_output.xml
@@ -24,11 +24,14 @@
 		android:id="@+id/linkView"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
+		android:layout_marginEnd="@dimen/margin_large"
+		android:layout_marginStart="@dimen/margin_large"
 		android:textIsSelectable="true"
+		android:padding="8dp"
+		android:background="@color/briar_white"
 		android:textSize="18sp"
 		android:typeface="monospace"
-		app:layout_constraintBottom_toTopOf="@id/copyButton"
+		app:layout_constraintBottom_toTopOf="@+id/copyButton"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/linkIntro"
@@ -39,51 +42,45 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
+		android:layout_marginTop="@dimen/margin_large"
+		android:drawableLeft="@drawable/ic_content_copy"
+		android:drawablePadding="8dp"
+		android:drawableTint="@color/briar_button_text_positive"
 		android:text="@string/copy_button"
-		app:layout_constraintEnd_toStartOf="@id/shareButton"
+		app:layout_constraintEnd_toStartOf="@+id/shareButton"
 		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintHorizontal_chainStyle="spread"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/linkView"/>
+		app:layout_constraintTop_toBottomOf="@+id/linkView"/>
 
 	<Button
 		android:id="@+id/shareButton"
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
 		android:text="@string/share_button"
+		android:drawableLeft="@drawable/social_share_white"
+		android:drawablePadding="8dp"
+		android:drawableTint="@color/briar_button_text_positive"
 		app:layout_constraintBottom_toBottomOf="@id/copyButton"
-		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/showCodeButton"
 		app:layout_constraintHorizontal_bias="0.5"
-		app:layout_constraintStart_toEndOf="@id/copyButton"
+		app:layout_constraintStart_toEndOf="@+id/copyButton"
 		app:layout_constraintTop_toTopOf="@id/copyButton"/>
-
-	<TextView
-		android:id="@+id/textView2"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:text="or"
-		android:textSize="18sp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/copyButton"/>
 
 	<Button
 		android:id="@+id/showCodeButton"
-		style="@style/BriarButton"
+		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="16dp"
 		android:drawableLeft="@drawable/ic_qr_code"
 		android:drawablePadding="8dp"
-		android:text="Show QR Code"
+		android:drawableTint="@color/briar_button_text_positive"
+		android:text="QR Code"
+		app:layout_constraintBottom_toBottomOf="@+id/copyButton"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toEndOf="@+id/shareButton"
+		app:layout_constraintTop_toTopOf="@+id/copyButton"/>
 
 </android.support.constraint.ConstraintLayout>
