--- a/briar-android/src/main/res/layout/fragment_contact_qr_code_input.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_qr_code_input.xml
@@ -23,6 +23,7 @@
 		android:layout_marginRight="8dp"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="16dp"
+		android:visibility="gone"
 		android:text="or"
 		android:textSize="18sp"
 		app:layout_constraintBottom_toTopOf="@+id/enterLinkButton"
@@ -41,6 +42,7 @@
 		android:layout_marginTop="16dp"
 		android:drawableLeft="@drawable/ic_link"
 		android:drawablePadding="8dp"
+		android:visibility="gone"
 		android:text="Enter Link"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
