--- a/briar-android/src/main/res/layout/fragment_contact_link_input.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_input.xml
@@ -11,10 +11,12 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/margin_large"
+		android:drawableLeft="@drawable/ic_person"
+		android:drawablePadding="8dp"
+		android:drawableTint="?attr/colorControlNormal"
 		android:hint="@string/contact_name_hint"
 		android:importantForAutofill="no"
 		android:inputType="text|textCapWords"
-		android:visibility="gone"
 		app:layout_constraintBottom_toTopOf="@id/linkInput"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -25,15 +27,18 @@
 		android:id="@+id/linkInput"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
 		android:layout_marginLeft="@dimen/margin_large"
+		android:layout_marginRight="8dp"
 		android:layout_marginStart="@dimen/margin_large"
 		android:layout_marginTop="16dp"
+		android:drawableLeft="@drawable/ic_link"
+		android:drawablePadding="8dp"
+		android:drawableTint="?attr/colorControlNormal"
 		android:hint="@string/contact_link_hint"
 		android:importantForAutofill="no"
 		android:inputType="textUri"
-		app:layout_constraintBottom_toTopOf="@id/addButton"
-		app:layout_constraintEnd_toStartOf="@id/pasteButton"
-		app:layout_constraintHorizontal_bias="0.8"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/contactNameInput"/>
 
@@ -42,16 +47,36 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
 		android:drawableLeft="@drawable/ic_content_paste"
 		android:drawablePadding="8dp"
 		android:drawableTint="@color/briar_text_link"
 		android:text="@string/paste_button"
-		app:layout_constraintBottom_toBottomOf="@id/linkInput"
+		app:layout_constraintEnd_toStartOf="@+id/scanCodeButton"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintHorizontal_chainStyle="spread"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/linkInput"/>
+
+	<Button
+		android:id="@+id/scanCodeButton"
+		style="@style/BriarButtonFlat.Positive"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:drawableLeft="@drawable/ic_qr_code"
+		android:drawablePadding="8dp"
+		android:drawableTint="@color/briar_button_text_positive"
+		android:text="Scan Code"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toEndOf="@id/linkInput"
-		app:layout_constraintTop_toTopOf="@id/linkInput"/>
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toEndOf="@+id/pasteButton"
+		app:layout_constraintTop_toBottomOf="@+id/linkInput"/>
 
 	<Button
 		android:id="@+id/addButton"
@@ -59,43 +84,13 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/margin_large"
+		android:layout_marginTop="8dp"
 		android:enabled="false"
 		android:text="@string/add_contact_button"
-
-		android:visibility="gone"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.75"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/linkInput"
+		app:layout_constraintTop_toBottomOf="@+id/pasteButton"
 		tools:enabled="true"/>
-
-	<TextView
-		android:id="@+id/textView3"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginLeft="8dp"
-		android:layout_marginRight="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="16dp"
-		android:text="or"
-		android:textSize="18sp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/addButton"/>
-
-	<Button
-		android:id="@+id/scanCodeButton"
-		style="@style/BriarButton"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginEnd="8dp"
-		android:layout_marginStart="8dp"
-		android:layout_marginTop="16dp"
-		android:drawableLeft="@drawable/ic_qr_code"
-		android:drawablePadding="8dp"
-		android:text="Scan QR Code"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textView3"/>
 
 </android.support.constraint.ConstraintLayout>
