--- a/briar-android/src/main/res/layout/fragment_contact_link_output.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_output.xml
@@ -26,9 +26,10 @@
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/margin_large"
 		android:layout_marginStart="@dimen/margin_large"
-		android:textIsSelectable="true"
-		android:padding="8dp"
 		android:background="@color/briar_white"
+		android:padding="8dp"
+		android:textColor="@color/briar_primary"
+		android:textIsSelectable="true"
 		android:textSize="18sp"
 		android:typeface="monospace"
 		app:layout_constraintBottom_toTopOf="@+id/copyButton"
@@ -58,10 +59,10 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/share_button"
 		android:drawableLeft="@drawable/social_share_white"
 		android:drawablePadding="8dp"
 		android:drawableTint="@color/briar_button_text_positive"
+		android:text="@string/share_button"
 		app:layout_constraintBottom_toBottomOf="@id/copyButton"
 		app:layout_constraintEnd_toStartOf="@+id/showCodeButton"
 		app:layout_constraintHorizontal_bias="0.5"
