Hack compound drawable tint for API < 23

--- a/briar-android/src/main/res/layout/fragment_contact_link_input.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_input.xml
@@ -21,7 +21,8 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintVertical_chainStyle="packed"/>
+		app:layout_constraintVertical_chainStyle="packed"
+		android:drawableStart="@drawable/ic_person"/>
 
 	<EditText
 		android:id="@+id/linkInput"
@@ -52,7 +53,6 @@
 		android:layout_marginTop="8dp"
 		android:drawableLeft="@drawable/ic_content_paste"
 		android:drawablePadding="8dp"
-		android:drawableTint="@color/briar_text_link"
 		android:text="@string/paste_button"
 		app:layout_constraintEnd_toStartOf="@+id/scanCodeButton"
 		app:layout_constraintHorizontal_bias="0.5"
@@ -71,7 +71,6 @@
 		android:layout_marginTop="8dp"
 		android:drawableLeft="@drawable/ic_qr_code"
 		android:drawablePadding="8dp"
-		android:drawableTint="@color/briar_button_text_positive"
 		android:text="Scan Code"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.5"
