--- a/briar-android/src/main/res/drawable/ic_qr_code.xml
+++ b/briar-android/src/main/res/drawable/ic_qr_code.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="24dp"
         android:height="24dp"
+        android:tint="#2A93C6"
         android:viewportHeight="24"
         android:viewportWidth="24">
 	<path
