--- a/briar-android/src/main/res/layout/fragment_contact_link_output.xml
+++ b/briar-android/src/main/res/layout/fragment_contact_link_output.xml
@@ -25,6 +25,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/margin_large"
+		android:layout_marginLeft="@dimen/margin_large"
+		android:layout_marginRight="@dimen/margin_large"
 		android:layout_marginStart="@dimen/margin_large"
 		android:background="@color/briar_white"
 		android:padding="8dp"
@@ -38,7 +40,7 @@
 		app:layout_constraintTop_toBottomOf="@id/linkIntro"
 		tools:text="briar://scnsdflamslkfjgluoblmksdfbwevlewajfdlkjewwhqliafskfjhskdjhvoieiv"/>
 
-	<Button
+	<android.support.v7.widget.AppCompatButton
 		android:id="@+id/copyButton"
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
@@ -46,7 +48,6 @@
 		android:layout_marginTop="@dimen/margin_large"
 		android:drawableLeft="@drawable/ic_content_copy"
 		android:drawablePadding="8dp"
-		android:drawableTint="@color/briar_button_text_positive"
 		android:text="@string/copy_button"
 		app:layout_constraintEnd_toStartOf="@+id/shareButton"
 		app:layout_constraintHorizontal_bias="0.5"
@@ -59,9 +60,8 @@
 		style="@style/BriarButtonFlat.Positive"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:drawableLeft="@drawable/social_share_white"
+		android:drawableLeft="@drawable/social_share_blue"
 		android:drawablePadding="8dp"
-		android:drawableTint="@color/briar_button_text_positive"
 		android:text="@string/share_button"
 		app:layout_constraintBottom_toBottomOf="@id/copyButton"
 		app:layout_constraintEnd_toStartOf="@+id/showCodeButton"
