Fix start/end margins for API 15
Fixes #1391

--- a/briar-android/src/main/res/layout/list_item_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_contact.xml
@@ -48,6 +48,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/margin_medium"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginRight="@dimen/margin_medium"
 		android:layout_marginStart="@dimen/margin_medium"
 		android:layout_marginTop="@dimen/listitem_vertical_margin"
 		android:paddingEnd="@dimen/margin_medium"
@@ -67,6 +69,8 @@
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/listitem_vertical_margin"
 		android:layout_marginEnd="@dimen/margin_medium"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginRight="@dimen/margin_medium"
 		android:layout_marginStart="@dimen/margin_medium"
 		android:paddingEnd="@dimen/margin_medium"
 		android:paddingStart="@dimen/margin_medium"
