--- a/briar-android/src/main/res/layout/list_item_selectable_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_selectable_contact.xml
@@ -24,6 +24,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
 		android:layout_marginTop="@dimen/listitem_horizontal_margin"
 		android:textColor="?android:attr/textColorPrimary"
@@ -41,6 +43,8 @@
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/listitem_horizontal_margin"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
 		android:maxLines="2"
 		android:text="@string/forum_invitation_already_sharing"
