--- a/briar-android/src/main/res/layout/list_item_thread.xml
+++ b/briar-android/src/main/res/layout/list_item_thread.xml
@@ -96,6 +96,8 @@
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="@dimen/margin_medium"
 			android:layout_marginEnd="@dimen/margin_medium"
+			android:layout_marginLeft="@dimen/margin_medium"
+			android:layout_marginRight="@dimen/margin_medium"
 			android:layout_marginStart="@dimen/margin_medium"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@+id/btn_reply"
@@ -109,6 +111,8 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="@dimen/margin_medium"
+			android:layout_marginLeft="@dimen/margin_medium"
+			android:layout_marginRight="@dimen/margin_medium"
 			android:layout_marginStart="@dimen/margin_medium"
 			android:text="@string/btn_reply"
 			android:textSize="@dimen/text_size_tiny"
