--- a/briar-android/src/main/res/layout/activity_dev_report.xml
+++ b/briar-android/src/main/res/layout/activity_dev_report.xml
@@ -28,6 +28,8 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="@dimen/margin_large"
+			android:layout_marginLeft="@dimen/margin_large"
+			android:layout_marginRight="@dimen/margin_large"
 			android:layout_marginStart="@dimen/margin_large"
 			android:layout_marginTop="@dimen/margin_large"
 			app:hintEnabled="false"
@@ -50,6 +52,8 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="@dimen/margin_large"
+			android:layout_marginLeft="@dimen/margin_large"
+			android:layout_marginRight="@dimen/margin_large"
 			android:layout_marginStart="@dimen/margin_large"
 			app:hintEnabled="false"
 			app:layout_constraintEnd_toEndOf="parent"
