--- a/briar-android/src/main/res/layout/checkbox.xml
+++ b/briar-android/src/main/res/layout/checkbox.xml
@@ -9,6 +9,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="@dimen/margin_activity_horizontal"
+		android:layout_marginStart="@dimen/margin_activity_horizontal"
 		android:layout_marginTop="@dimen/margin_activity_vertical"
 		android:checked="false"
 		android:text="@string/don_t_ask_again"/>
