--- a/briar-android/src/main/res/layout/fragment_error.xml
+++ b/briar-android/src/main/res/layout/fragment_error.xml
@@ -11,6 +11,8 @@
 		android:layout_width="128dp"
 		android:layout_height="128dp"
 		android:layout_marginEnd="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginRight="8dp"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:src="@drawable/alerts_and_states_error"
@@ -25,6 +27,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="8dp"
+		android:layout_marginLeft="8dp"
+		android:layout_marginRight="8dp"
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:text="@string/sorry"
