--- a/briar-android/src/main/res/layout/introduction_message.xml
+++ b/briar-android/src/main/res/layout/introduction_message.xml
@@ -27,6 +27,8 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="@dimen/margin_large"
+			android:layout_marginLeft="@dimen/margin_large"
+			android:layout_marginRight="@dimen/margin_large"
 			android:layout_marginStart="@dimen/margin_large"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:gravity="center"
@@ -66,6 +68,8 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="@dimen/margin_large"
+			android:layout_marginLeft="@dimen/margin_large"
+			android:layout_marginRight="@dimen/margin_large"
 			android:layout_marginStart="@dimen/margin_large"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:gravity="center"
