--- a/briar-android/src/main/res/layout/list_item_blog_post.xml
+++ b/briar-android/src/main/res/layout/list_item_blog_post.xml
@@ -19,6 +19,8 @@
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="@dimen/listitem_horizontal_margin"
 			android:layout_marginEnd="@dimen/listitem_vertical_margin"
+			android:layout_marginLeft="@dimen/listitem_vertical_margin"
+			android:layout_marginRight="@dimen/listitem_vertical_margin"
 			android:layout_marginStart="@dimen/listitem_vertical_margin"
 			android:layout_marginTop="@dimen/listitem_vertical_margin"
 			app:layout_constraintEnd_toStartOf="@+id/commentView"
@@ -32,10 +34,11 @@
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="@dimen/listitem_horizontal_margin"
 			android:layout_marginEnd="@dimen/listitem_vertical_margin"
+			android:layout_marginLeft="@dimen/listitem_vertical_margin"
+			android:layout_marginRight="@dimen/listitem_vertical_margin"
 			android:layout_marginStart="@dimen/listitem_vertical_margin"
 			android:layout_marginTop="@dimen/listitem_vertical_margin"
 			app:layout_constraintEnd_toStartOf="@+id/commentView"
-			app:layout_constraintLeft_toLeftOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/rebloggerView"/>
 
