--- a/briar-android/src/main/res/layout/list_item_revealable_contact.xml
+++ b/briar-android/src/main/res/layout/list_item_revealable_contact.xml
@@ -23,6 +23,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
+		android:layout_marginLeft="@dimen/listitem_horizontal_margin"
+		android:layout_marginRight="@dimen/listitem_horizontal_margin"
 		android:layout_marginStart="@dimen/listitem_horizontal_margin"
 		android:layout_marginTop="@dimen/listitem_vertical_margin"
 		android:textColor="?android:attr/textColorPrimary"
@@ -51,6 +53,8 @@
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/listitem_vertical_margin"
 		android:layout_marginEnd="@dimen/margin_small"
+		android:layout_marginLeft="@dimen/margin_small"
+		android:layout_marginRight="@dimen/margin_small"
 		android:layout_marginStart="@dimen/margin_small"
 		android:text="@string/groups_reveal_visible"
 		android:textColor="?android:attr/textColorSecondary"
