--- a/briar-android/src/main/res/layout/power_view.xml
+++ b/briar-android/src/main/res/layout/power_view.xml
@@ -12,6 +12,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/margin_large"
+		android:layout_marginLeft="@dimen/margin_large"
+		android:layout_marginRight="@dimen/margin_large"
 		android:layout_marginStart="@dimen/margin_large"
 		android:layout_marginTop="@dimen/margin_medium"
 		android:textSize="@dimen/text_size_medium"
