--- a/briar-android/src/main/res/layout/text_input_view_large.xml
+++ b/briar-android/src/main/res/layout/text_input_view_large.xml
@@ -12,6 +12,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginEnd="@dimen/margin_medium"
+		android:layout_marginLeft="@dimen/margin_medium"
+		android:layout_marginRight="@dimen/margin_medium"
 		android:layout_marginStart="@dimen/margin_medium"
 		android:layout_marginTop="@dimen/margin_medium"
 		android:elevation="@dimen/cardview_default_elevation"
